fix page height, spacing, added projects, favicon

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,7 +55,7 @@ $my-green: #98BCBD;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 2s ease-in-out;
+    animation: App-logo-spin infinite 2.5s ease-in-out;
     animation-direction: alternate;
   }
   .typewriter {
@@ -69,10 +69,10 @@ $my-green: #98BCBD;
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(-5deg);
+    transform: rotate(-2deg);
   }
   to {
-    transform: rotate(5deg);
+    transform: rotate(2deg);
   }
 }
 
